<resources>
    <string name="app_name">Solve your Matrix</string>
    <string name="input">Enter the initial matrix\n</string>
    <string name="output">Enter the final matrix\n</string>
    <string name="action_settings">Settings</string>
    <string name="solve">Solve!</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="helptext">Solve your Matrix is based on tile number sliding problem related to Artificial Intelligence.\n
    Enter the start state in Initial matrix and the end state in Final matrix with empty tile as blank text field and click on SOLVE!.\n
    Click on the buttons next to empty space to slide the number into the empty space next to it.\n
    The counter counts the number of steps taken to solve and reset button resets the matrix and the counter.\n
    Counter includes the start state too.\n
    For now only 3x3 matrix with one empty space is allowed.</string>
    <string name="abouttext">AD95</string>
    <string name="in">Initial Matrix\n</string>
    <string name="out">Final Matrix\n</string>
    <string name="reset">Reset</string>
    <string name="count">1</string>
    <string name="title_activity_main2">Solve it!</string>
</resources>
