<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/input" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:stretchColumns="*"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerHorizontal="true">
        <TableRow android:layout_height="match_parent"
            android:baselineAligned="false"
            android:layout_weight="1"
            android:stretchColumns="*"
            android:measureWithLargestChild="false"
            android:nestedScrollingEnabled="false">

            <EditText
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="number"
                android:layout_gravity="center"
                android:ems="10"
                android:imeOptions="actionNext"
                android:id="@+id/editText1"
                android:nextFocusForward="@+id/editText2"
                android:layout_column="0"
                android:autoText="false" />
            <EditText
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_gravity="center"
                android:ems="10"
                android:nextFocusForward="@+id/editText3"
                android:id="@+id/editText2"
                android:layout_column="1" />

            <EditText
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText3"
                android:layout_gravity="center"
                android:nextFocusForward="@+id/editText4"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <EditText
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText4"
                android:nextFocusForward="@+id/editText5"
                android:layout_gravity="center"
                android:layout_column="0" />

            <EditText
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nextFocusForward="@+id/editText6"
                android:inputType="number"
                android:layout_gravity="center"
                android:ems="10"
                android:id="@+id/editText5"
                android:layout_column="1" />

            <EditText
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText6"
                android:nextFocusForward="@+id/editText7"
                android:layout_gravity="center"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <EditText
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:nextFocusForward="@+id/editText8"
                android:layout_gravity="center"
                android:ems="10"
                android:id="@+id/editText7"
                android:layout_column="0" />

            <EditText
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText8"
                android:layout_gravity="center"
                android:nextFocusForward="@+id/editText9"
                android:layout_column="1" />

            <EditText
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_gravity="center"
                android:ems="10"
                android:id="@+id/editText9"
                android:nextFocusForward="@+id/editText10"
                android:layout_column="1" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/output"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignStart="@+id/textView1" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:stretchColumns="*"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/tableLayout3">

        <TableRow
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:layout_weight="1"
            android:stretchColumns="*"
            android:measureWithLargestChild="false"
            android:nestedScrollingEnabled="false"
            android:layout_width="wrap_content" >

            <EditText
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="number"
                android:layout_gravity="center"
                android:ems="10"
                android:imeOptions="actionNext"
                android:id="@+id/editText10"
                android:nextFocusForward="@+id/editText11"
                android:layout_column="0"
                android:autoText="false" />

            <EditText
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_gravity="center"
                android:ems="10"
                android:nextFocusForward="@+id/editText12"
                android:id="@+id/editText11"
                android:layout_column="1" />

            <EditText
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText12"
                android:layout_gravity="center"
                android:nextFocusForward="@+id/editText13"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent" >

            <EditText
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText13"
                android:nextFocusForward="@+id/editText14"
                android:layout_gravity="center"
                android:layout_column="0" />

            <EditText
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nextFocusForward="@+id/editText15"
                android:inputType="number"
                android:layout_gravity="center"
                android:ems="10"
                android:id="@+id/editText14"
                android:layout_column="1" />

            <EditText
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText15"
                android:nextFocusForward="@+id/editText16"
                android:layout_gravity="center"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <EditText
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:nextFocusForward="@+id/editText17"
                android:layout_gravity="center"
                android:ems="10"
                android:id="@+id/editText16"
                android:layout_column="0" />

            <EditText
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText17"
                android:layout_gravity="center"
                android:nextFocusForward="@+id/editText18"
                android:layout_column="1" />

            <EditText
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_gravity="center"
                android:ems="10"
                android:id="@+id/editText18"
                android:nextFocusForward="@+id/editText1"
                android:layout_column="1" />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/button1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignLeft="@+id/tableLayout3"
        android:layout_toLeftOf="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solve"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/tableLayout3"
        android:layout_alignEnd="@+id/tableLayout3"
        android:layout_toLeftOf="@+id/button1"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignParentRight="true" />

</RelativeLayout>
